Fix button contrast in night mode

--- a/_sass/layout/_get-advice.scss
+++ b/_sass/layout/_get-advice.scss
@@ -167,6 +167,10 @@
         }
     }
 
+    .button {
+        color: white;
+    }
+
     .logos {
         svg {
             path,
